Configure javadoc generation (#19)
* Add javadoc generation

* Don't complain about missing documentation

* Bump version